<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/dark_bg">

    <Button
        android:id="@+id/list_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/demo_view_quiz"
        android:textColor="@color/accent_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_read_more"
        app:strokeColor="@color/accent_blue"
        app:strokeWidth="1dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/quiz_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/dark_grey"
        app:cardCornerRadius="6dp">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/demo_description"
            android:foreground="@drawable/image_cover"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/placeholder_image"
            tools:ignore="ImageContrastCheck" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/demo_quiz_description"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_title"
        app:lineHeight="28dp" />

    <TextView
        android:id="@+id/list_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/demo_difficulty"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_read_more" />

    <Button
        android:id="@+id/list_read_more"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/demo_show_more"
        android:textAllCaps="false"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_desc"
        app:rippleColor="@android:color/transparent" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/demo_quiz_title"
        android:textColor="@color/accent_blue"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_card" />
</androidx.constraintlayout.widget.ConstraintLayout>