<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/dark_grey">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:background="@color/dark_grey"
            app:contentScrim="@color/dark_grey"
            app:statusBarScrim="@color/dark_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            app:title="@string/app_name">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/image_cover"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder_image" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/details_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/demo_difficulty"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <TextView-->
<!--                android:id="@+id/details_title"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="32dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:fontFamily="@font/crimson_text"-->
<!--                android:text="@string/quiz_title"-->
<!--                android:textColor="@color/accent_blue"-->
<!--                android:textSize="26sp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"/>-->

            <TextView
                android:id="@+id/details_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/total_questions"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_difficulty" />

            <TextView
                android:id="@+id/details_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/your_last_score"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_questions" />

            <TextView
                android:id="@+id/details_difficulty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/n_a"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/details_difficulty" />

            <TextView
                android:id="@+id/details_questions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/n_a"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_difficulty_text" />

            <TextView
                android:id="@+id/details_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/n_a"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_questions_text" />


            <TextView
                android:id="@+id/details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/work_sans"
                android:gravity="start"
                android:text="@string/quiz_description"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:lineHeight="28dp"
                app:layout_constraintBottom_toTopOf="@+id/details_start_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_score"/>

            <Button
                android:id="@+id/details_start_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:elevation="10dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/start_quiz"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>